[package]
name = "tryteex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ini_core= "0.1.0"
chrono= "0.4.19"
byteorder="1.4.3"
cast= "0.3.0"
postgres= "0.19.3"
postgres-protocol="0.6.4"
urlencoding = "2.1.0"
regex = "1.5.6"
sha3 = "0.10.1"
serde_json = "1.0.81"
serde = { version = "1.0.137", features = ["derive"] }