[package]
name = "tryteex"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ini_core= "0.1"
chrono= "0.4"
byteorder="1.4"
cast= "0.3"
postgres= "0.19"
postgres-protocol="0.6"
urlencoding = "2.1"
regex = "1.5"
sha3 = "0.10"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.3"